--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,9 @@
     "react-native-stack": "^1.0.0-alpha11",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "expo start",
